fix size calc, avoid horizontal scroll in feature modal

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,3 +75,7 @@ a:hover, .link:hover {
   visibility: visible;
   opacity: 1;
 }
+
+.small {
+  size: 85%;
+}
